--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -10,4 +10,17 @@
         android:name="com.example.rickandmorty.presentation.fragments.CharactersFragment"
         android:label="Characters"
         tools:layout="@layout/fragment_characters" />
+
+    <fragment
+        android:id="@+id/locationsFragment"
+        android:name="com.example.rickandmorty.presentation.fragments.LocationsFragment"
+        android:label="Locations"
+        tools:layout="@layout/fragment_locations"/>
+
+    <fragment
+        android:id="@+id/episodesFragment"
+        android:name="com.example.rickandmorty.presentation.fragments.EpisodesFragment"
+        android:label="Episodes"
+        tools:layout="@layout/fragment_episodes"/>
+
 </navigation>
